add nav html and create flex mixin

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,16 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+header nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
