add main header sectio, content and style

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,5 @@
-// Navigation Styles here
-
-.displayFlexDir(@flex-dir) {
-    display: flex;
-    flex-direction: @flex-dir;
-}
-
 header {
-    border-bottom:2px dashed @silver;
+    border-bottom:2px dashed @navigation-border;
 
     .navigation {
         padding: 2rem 0;
@@ -22,7 +15,7 @@ header {
         nav a {
             color: @shark;
             text-decoration: none;
-            font-size: 1.6rem;
+            font-size: 1.8rem;
             padding:0 2rem;
 
             &:hover {
