--- a/css/index.css
+++ b/css/index.css
@@ -185,7 +185,7 @@ header .navigation nav {
 header .navigation nav a {
   color: #212529;
   text-decoration: none;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   padding: 0 2rem;
 }
 header .navigation nav a:hover {
@@ -201,6 +201,9 @@ header .navigation nav a:hover {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .main-header {
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section {
   margin: 30px 0;
