--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,10 @@
 .home {
 
+
+  .main-header {
+    border-bottom: 2px dashed @navigation-border;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
