add style to button with parametric mixin

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,3 +3,15 @@
     display: flex;
     flex-direction: @flex-dir;
 }
+
+// used on home-page
+.btn(@btn-font-size,@btn-padding, @btn-bord-rad) {
+    background-color: @button-bg;
+    color: white;
+    text-align: center;
+    font-weight: 600;
+    // Parameters
+    font-size:@btn-font-size;
+    border-radius: @btn-bord-rad;
+    padding: @btn-padding;
+}
