--- a/css/index.css
+++ b/css/index.css
@@ -251,3 +251,12 @@ header .navigation nav a:hover {
   width: 30%;
   margin-bottom: 30px;
 }
+.home .content-pick .destination .btn {
+  background-color: #008080;
+  color: white;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.8rem;
+  border-radius: 2rem;
+  padding: 1.8rem;
+}
