--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,6 +61,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .btn(1.8rem, 1.8rem, 2rem);
+      }
+
     }
   }
 }// home
