add mobile responsiveness Add mobile responsiveness for devices under 500px. Use the .displayFlexDirCon() mixin to put section needed in to column. Adjust margin/padding where necessary.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,16 +11,29 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    @media @mobile {
+      .displayFlexDirCon(column, center);
+    }
     
     .text-content {
       width: 48%;
       padding-right: 1%;
-    }
 
+      @media @mobile {
+        width: 100%;
+        padding-right: 0;
+      }
+    }
+    
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding-left:0;
+        text-align:center;
+      }
 
       img {
         border-radius: 10px;
@@ -31,6 +44,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile {
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -47,6 +64,10 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    @media @mobile {
+      width:100%;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -58,12 +79,21 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      .displayFlexDirCon(column, center);
+      align-items: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
 
+      @media @mobile {
+        width:80%;
+      }
+
       .btn {
-        .btn(1.8rem, 1.8rem, 2rem);
+        .btn(1.8em, 1em, 1em);
       }
 
     }
