--- a/less/variables.less
+++ b/less/variables.less
@@ -13,3 +13,8 @@
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
 @coolblue: #008080;
+
+// devices
+
+@mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 750px)";
