--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/* .displayFlexItem(@align-item) {
+    align-items: @align-item;
+} */
 * {
   box-sizing: border-box;
 }
@@ -172,15 +175,31 @@ header {
   border-bottom: 2px dashed #C0C0C0;
 }
 header .navigation {
-  padding: 2rem 0;
   display: flex;
   flex-direction: row;
+  align-content: center;
   justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 500px) {
+  header .navigation {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
+header .navigation h1 {
+  padding: 2rem 0;
 }
 header .navigation nav {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-content: center;
+}
+@media (max-width: 500px) {
+  header .navigation nav {
+    padding-bottom: 2rem;
+  }
 }
 header .navigation nav a {
   color: #212529;
@@ -211,13 +230,33 @@ header .navigation nav a:hover {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding-right: 0;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 0;
+    text-align: center;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -225,6 +264,11 @@ header .navigation nav a:hover {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -238,6 +282,11 @@ header .navigation nav a:hover {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -247,16 +296,29 @@ header .navigation nav a:hover {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
 }
 .home .content-pick .destination .btn {
   background-color: #008080;
   color: white;
   text-align: center;
   font-weight: 600;
-  font-size: 1.8rem;
-  border-radius: 2rem;
-  padding: 1.8rem;
+  font-size: 1.8em;
+  border-radius: 1em;
+  padding: 1em;
 }
