--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,7 +12,8 @@ header {
         }
         
         h1 {
-            padding: 2rem 0;            
+            padding: 2rem 0;
+            .animate-header(pulse, 5s, infinite);
         }
 
         nav {
