--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,10 +5,19 @@
     align-content: @align-content;
 }
 
-/* .displayFlexItem(@align-item) {
-    align-items: @align-item;
-} */
+.animate-header(@pulse, @second, @type) {
+    animation: @pulse @second @type;
+}
 
+@keyframes pulse {
+    0%, 100 {
+        color: #001F3F;
+    }
+
+    50% {
+        color: #FF4136;
+    }
+}
 
 // used on home-page
 .btn(@btn-font-size,@btn-padding, @btn-bord-rad) {
