--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,7 @@ header {
         
         h1 {
             padding: 2rem 0;
-            .animate-header(pulse, 5s, infinite);
+            .animate-header(spin, 5s, infinite);
         }
 
         nav {
